--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,5 +2,6 @@ version: 0.2
 phases:
   build:
     commands:
+      - echo "------> ${DATABASE_URL}"
       - sam build
       - sam deploy --no-confirm-changeset --no-fail-on-empty-changeset
